KM-UI-Fixes: made fixes to UI and removed carousel arrows on mobile.

--- a/src/style.scss
+++ b/src/style.scss
@@ -395,6 +395,10 @@ body {
   }
 }
 
+button:focus {
+  outline: 0;
+}
+
 @media(min-width: $phone-breakpoint) {
   .btn {
     margin: 30px;
@@ -447,7 +451,7 @@ a {
 }
 
 .col-2 {
-  padding: 30px;
+  padding: 20px 35px;
   width: 100%;
   display: block;
 }
@@ -562,53 +566,43 @@ a {
 }
 
 .arrow-container {
-  cursor: pointer;
-  background-color: transparent;
-  border: none;
-  position: absolute;
-  z-index: 10;
-
-  i {
-    border-radius: 100%;
-    transition: all 0.3s $custom-ease;
-    color: $font-white;
-
-    &:hover {
-      background-color: rgba(0,0,0,0.3);
-    }
-
-    &:active {
-      background-color: rgba(0,0,0,0.5);
-    }
-  }
-
-  .material-icons.lg {
-    font-size: 48;
-  }
+  display: none;
 }
 
 @media(min-width: $phone-breakpoint) {
   .arrow-container {
-      .material-icons.lg {
-        font-size: 64;
-      }
-      i {
-        &:hover {
-          background-color: rgba(red($arrow-gray), green($arrow-gray), blue($arrow-gray),0.3);
-        }
+    display: block;
+    position: absolute;
+    z-index: 10;
+    cursor: pointer;
+    background-color: transparent;
+    color: $font-white;
+    border: none;
+    border-radius: 5px;
+    transition: all 0.3s $custom-ease;
 
-        &:active {
-          background-color: rgba(red($arrow-gray), green($arrow-gray), blue($arrow-gray),0.5);
-        }
-      }
+    &:hover {
+      background-color: rgba(red($arrow-gray), green($arrow-gray), blue($arrow-gray),0.3);
+    }
+
+    &:active {
+      background-color: rgba(red($arrow-gray), green($arrow-gray), blue($arrow-gray),0.5);
+    }
+
+    .material-icons.lg {
+      font-size: 64;
+    }
   }
 }
 
 @media(min-width: $tablet-breakpoint) {
   .arrow-container {
-      .material-icons.lg {
-        font-size: 84;
-      }
+    padding: 0;
+    border-radius: 100%;
+
+    .material-icons.lg {
+      font-size: 84;
+    }
   }
 }
 
@@ -765,13 +759,14 @@ a {
   opacity: 0;
 }
 
-.animation:hover {
-  transform: translatey(-15px);
-  .arrow-link {
-    animation: bounce 600ms $custom-ease;
+@media(min-width: $phone-breakpoint) {
+  .animation:hover {
+    transform: translatey(-15px);
+    .arrow-link {
+      animation: bounce 600ms $custom-ease;
+    }
   }
 }
-
 
 .footer-appear {
   transform: translateY(-15px);
@@ -811,7 +806,7 @@ a {
 }
 
 .material-icons.icon-shadow {
-  text-shadow: 1px 1px 4px black;
+  text-shadow: 1px 1px 2px rgba( 0, 0, 0, 0.5);
 }
 
 // Page Animations
